corrections and additions
