# routes/workout.js
@@ -2,19 +2,17 @@
 const express = require('express');
 const router = express.Router();
 
-const workController = require('../controllers/workout');
-
+const workController = require('../controllers/workouts');
+//const validation = require('../middleware/validate');
 
 router.get('/', workController.getAll);
 
-router.get('/:username', workController.getWorkout);
-
-router.put('/:id', workController.updateWorkout);
+router.get('/:id', workController.getWorkout);
 
 router.post('/', workController.createWorkout);
 
+router.put('/:id', workController.updateWorkout);
+
 router.delete('/:id', workController.deleteWorkout);
-
-
 
 module.exports = router;
