# swagger.json
@@ -297,14 +297,14 @@
         }
       }
     },
-    "/workout/{name}": {
+    "/workout/{id}": {
       "get": {
-        "description": "Get all workout by workout name",
+        "description": "Get all workouts by ID",
         "tags": ["workout"],
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "name",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -316,17 +316,9 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/workout/{id}": {
+      },
       "put": {
         "description": "update workout by ID",
         "tags": ["workout"],
@@ -668,14 +660,14 @@
         }
       }
     },
-    "/achievement/{name}": {
+    "/achievement/{id}": {
       "get": {
-        "description": "Get all user achievements by name",
+        "description": "Get all progress by achievement ID",
         "tags": ["achievement"],
         "produces": ["application/json"],
         "parameters": [
           {
-            "name": "name",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -687,17 +679,9 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/achievement/{id}": {
+      },
       "put": {
         "description": "update achievement by ID",
         "tags": ["achievement"],
